--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
     <main>
@@ -42,6 +42,6 @@
     </div>
         <button><div class="round"><span>+</span></div>Add to list</button>
     </main>
-    <script src="main.js"></script>
+    <script src="./assets/main.js"></script>
 </body>
 </html>
